@@ -1,15 +1,13 @@
 package faang.school.achievement.listener;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import faang.school.achievement.handler.EventHandler;
+import faang.school.achievement.handler.AbstractAchievementHandler;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.redis.connection.Message;
 import org.springframework.data.redis.connection.MessageListener;
 
 import java.io.IOException;
-import java.lang.reflect.ParameterizedType;
-import java.lang.reflect.Type;
 import java.util.List;
 
 @RequiredArgsConstructor
@@ -17,18 +15,17 @@ import java.util.List;
 public abstract class AbstractEventListener<T> implements MessageListener {
 
     private final ObjectMapper objectMapper;
-    private final List<EventHandler<T>> handlers;
+    private final List<AbstractAchievementHandler<T>> eventHandlers;
     private final Class<T> type;
 
     @Override
     public void onMessage(Message message, byte[] pattern) {
         try {
-            T event = objectMapper.readValue(message.getBody(), type);
-            handlers.stream()
-                    .filter(handler -> handler.getType() == type)
-                    .forEach(handler -> handler.handleEvent(event));
+            T mentorshipStartEvent = objectMapper.readValue(message.getBody(), type);
+            eventHandlers.forEach(eventHandler -> eventHandler.handleEvent(mentorshipStartEvent));
         } catch (IOException e) {
-            throw new RuntimeException(String.format("Received message decoding failed: %s", e));
+            log.error("Could not value from JSON: %s".formatted(message));
+            throw new RuntimeException(e);
         }
     }
 }
